--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div class="super">
         <nav>
+            <img src="asbfv-hxmcy.jpg">
             <h2 class="logo">Henr<span>ique</span></h2>
             <ul>
             <li><a href="#">Inicio</a></li>
