--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
     <div class="super">
         <nav>
-            <img src="asbfv-hxmcy.jpg">
             <h2 class="logo">Henr<span>ique</span></h2>
             <ul>
             <li><a href="#">Inicio</a></li>
@@ -43,7 +42,7 @@
         <!------ inicio nova seção---->
     <section class="sobre">
         <div class="main">
-            <img src="img02.jpg">
+            <img src="acfjz-10jby.jpg">
             <div class="sobre-texto">
                 <h2>Sobre mim</h2>
                 <h5>universitário <span>& escritor</span> </h5>
