--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!------ inicio nova seção---->
     <section class="sobre">
         <div class="main">
-            <img src="acfjz-10jby.jpg">
+            <img src="https://s4.aconvert.com/convert/p3r68-cdx67/acfjz-10jby.jpg">
             <div class="sobre-texto">
                 <h2>Sobre mim</h2>
                 <h5>universitário <span>& escritor</span> </h5>
