--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!------ inicio nova seção---->
     <section class="sobre">
         <div class="main">
-            <img src="https://s4.aconvert.com/convert/p3r68-cdx67/acfjz-10jby.jpg">
+            <img src="https://photos.google.com/album/AF1QipMYszm5hc1K2x5pzJ7yXMA7s27Kma9TGqi_P3oM/photo/AF1QipO6wLhYDHWjz3WVxp8oKNqzrA-owgAulDtIn2P2">
             <div class="sobre-texto">
                 <h2>Sobre mim</h2>
                 <h5>universitário <span>& escritor</span> </h5>
