--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!------- inicio da seção do topo -------->
 
     <div class="super">
+        <img src="https://photos.google.com/album/AF1QipMYszm5hc1K2x5pzJ7yXMA7s27Kma9TGqi_P3oM/photo/AF1QipOzEdFtnxdyWJrY131qwjfZMlVDEGooPqPddOPi">
         <nav>
             <h2 class="logo">Henr<span>ique</span></h2>
             <ul>
