--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-        <!------ inicio nova seção---->
+        <!----- inicio nova seção---->
     <section class="sobre">
         <div class="main">
             <img src="https://photos.google.com/search/_tra_/photo/AF1QipO53oRiJAjWOFiF82-z7CuDxlPp3jqNsi4ubePg">
