--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!----- inicio nova seção---->
     <section class="sobre">
         <div class="main">
-            <img src="https://photos.google.com/search/_tra_/photo/AF1QipO53oRiJAjWOFiF82-z7CuDxlPp3jqNsi4ubePg">
+            <img src="https://photos.google.com/share/AF1QipNB_bR_01b2Hf30NLPhmKel_4iY-Czlnb0ImcycDQGjQSONQPTyZBhochT_ejUwfQ/photo/AF1QipO6wLhYDHWjz3WVxp8oKNqzrA-owgAulDtIn2P2?key=R0M1WUZuVDNEczVrUGhCVmxuSXh6bFpvMnFOcGVR">
             <div class="sobre-texto">
                 <h2>Sobre mim</h2>
                 <h5>universitário <span>& escritor</span> </h5>
