--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!----- inicio nova seção---->
     <section class="sobre">
         <div class="main">
-            <img src="https://photos.google.com/album/AF1QipMYszm5hc1K2x5pzJ7yXMA7s27Kma9TGqi_P3oM/photo/AF1QipO6wLhYDHWjz3WVxp8oKNqzrA-owgAulDtIn2P2">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fblog.cobasi.com.br%2Fcarrapato-estrela%2F&psig=AOvVaw1ihbmcl--T3jeh8IR9CGeD&ust=1639356347667000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNi377iE3fQCFQAAAAAdAAAAABAD">
             <div class="sobre-texto">
                 <h2>Sobre mim</h2>
                 <h5>universitário <span>& escritor</span> </h5>
