--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <i class="fas fa-book-reader"></i>
                 <h5>Habilidades</h5>
                 <div class="inbox">
-                    <p>Com o tempo irei postar minhas habilidades aqui</p>
+                    <p>Skills</p>
                     <p style="text-align: center;">
                         <a class="button" href="#">Veja mais aqui</a>
                     </p>
@@ -92,7 +92,7 @@
                 <i class="fas fa-book"></i>
                 <h5>Meu livro</h5>
                 <div class="inbox">
-                    <p>Estou postando a algum tempo, parece que está ficando bom tem até gente lendo :)</p>
+                    <p>Que saber mais sobre o livro?</p>
                     <p style="text-align: center;">
                         <a class="button" href="https://www.wattpad.com/user/Namoronerd3">Veja mais aqui</a>
                     </p>
@@ -104,7 +104,7 @@
     <!-----onde me encontrar----->
 
     <div class="contact-me">
-        <p>Quer me contratar</p>
+        <p>Contato</p>
         <a class="button-two" href="#">clique aqui</a>
     </div>
 
