--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!----- inicio nova seção---->
     <section class="sobre">
         <div class="main">
-            <img src="img/img02.jpg">
+            <img src="/img/img02.jpg">
             <div class="sobre-texto">
                 <h2>Sobre mim</h2>
                 <h5>universitário <span>& escritor</span> </h5>
