--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <Title> Portifolio Website</Title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <link rel="preconnect" href="https://gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=josefin+Sans:ital,wght@0,100;0;200;0;300;0;500;0;700;1;100;1;200;1;300;1;400;1;500;1;600;700&display=swap" rel="stylesheet">
